# familyclaw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: check-webview2.bat  generate-icons.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_keys.rs  backup.rs  channels.rs  config.rs  debug.rs  installer.rs  lib.rs  main.rs  openclaw.rs  safety.rs  self_improve.rs  skills.rs
src/components/: ApiKeys.tsx  Channels.tsx  Dashboard.tsx  DebugPanel.tsx  Safety.tsx  SelfImprove.tsx  SettingsPanel.tsx  Skills.tsx
src/hooks/: useNotification.ts  useTheme.tsx
